src/objects/Health_Score__c.object
<CustomObject>
    <fields>
        <fullName>Account_Level_RAS__c</fullName>
        <formula>CASE(Health_Segment__c, 
					&apos;Program Score&apos;, $CustomMetadata.Health_Score_Elements__mdt.Program_Score.Recommended_Action_Steps__c, 
					&apos;Renewal Timing&apos;, $CustomMetadata.Health_Score_Elements__mdt.Renewal_Timing.Recommended_Action_Steps__c,
					&apos;Cross Sells/Expansions&apos;, $CustomMetadata.Health_Score_Elements__mdt.Cross_Sells_Expansions.Recommended_Action_Steps__c,
					&apos;Client NPS&apos;, $CustomMetadata.Health_Score_Elements__mdt.Client_NPS.Recommended_Action_Steps__c,
					&apos;Interaction Cadence&apos;, $CustomMetadata.Health_Score_Elements__mdt.Interaction_Cadence.Recommended_Action_Steps__c,
					&apos;Executive Sponsor Interaction/Engagement&apos;, $CustomMetadata.Health_Score_Elements__mdt.Executive_Sponsor_Interaction_Engagement.Recommended_Action_Steps__c,
					&apos;Contract Path/Partner Relationship/Status&apos;, $CustomMetadata.Health_Score_Elements__mdt.Contract_Path_Partner_Relationship_Statu.Recommended_Action_Steps__c,
					&apos;Client Business Health&apos;, $CustomMetadata.Health_Score_Elements__mdt.Client_Business_Health.Recommended_Action_Steps__c,
					&apos;Issues&apos;, $CustomMetadata.Health_Score_Elements__mdt.Issues.Recommended_Action_Steps__c,
					&apos;Competitor w/in account&apos;, $CustomMetadata.Health_Score_Elements__mdt.Competitor_w_in_account.Recommended_Action_Steps__c,
					&apos;Immediate Action Needed&apos;, $CustomMetadata.Health_Score_Elements__mdt.Immediate_Action_Needed.Recommended_Action_Steps__c,
					 &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Level RAS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Health Scores</relationshipLabel>
        <relationshipName>Health_Scores</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Actual_Result__c</fullName>
        <label>Actual Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSM_Action_Steps__c</fullName>
        <label>CSM Action Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_Business_Health__c</fullName>
        <label>Client Business Health</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Growing</fullName>
                </value>
                <value>
                    <fullName>Stable</fullName>
                </value>
                <value>
                    <fullName>Declining</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_NPS__c</fullName>
        <label>Client NPS</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_doesn_t_complete_survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client doesn&apos;t complete survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitor_w_in_account__c</fullName>
        <label>Competitor w/in account</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Path_Status__c</fullName>
        <label>Contract Path Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Green Partner</fullName>
                </value>
                <value>
                    <fullName>Yellow Partner</fullName>
                </value>
                <value>
                    <fullName>Red/Black Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cross_Sells_Expansions__c</fullName>
        <label>Cross Sells/Expansions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Expansion/cross sell opp/no additional programs to sell</fullName>
                </value>
                <value>
                    <fullName>On path to discussion</fullName>
                </value>
                <value>
                    <fullName>Partnership does not allow expansion</fullName>
                </value>
                <value>
                    <fullName>Client declined discussion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Diastolic_BP_Reduction__c</fullName>
        <label>Diastolic BP Reduction</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Display_Fields__c</fullName>
        <label>Display Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Element_Section__c</fullName>
        <label>Element Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsor_Interaction_Engagement__c</fullName>
        <label>Executive Sponsor Interaction/Engagement</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Seat at executive sponsor table</fullName>
                </value>
                <value>
                    <fullName>Livongo executive relationship</fullName>
                </value>
                <value>
                    <fullName>Client Advisory Board</fullName>
                </value>
                <value>
                    <fullName>Operational engagement</fullName>
                </value>
                <value>
                    <fullName>Reference/case study/white paper</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_Segment__c</fullName>
        <label>Health Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Member Satisfaction</fullName>
                </value>
                <value>
                    <fullName>Enrollment</fullName>
                </value>
                <value>
                    <fullName>Activation</fullName>
                </value>
                <value>
                    <fullName>Active 30</fullName>
                </value>
                <value>
                    <fullName>Marketing Type (Outreach Stratification)</fullName>
                </value>
                <value>
                    <fullName>Email Coverage</fullName>
                </value>
                <value>
                    <fullName>Population Refresh</fullName>
                </value>
                <value>
                    <fullName>eHba1c Reduction</fullName>
                </value>
                <value>
                    <fullName>ROI Status</fullName>
                </value>
                <value>
                    <fullName>Client Launch Date</fullName>
                </value>
                <value>
                    <fullName>Systolic BP Reduction</fullName>
                </value>
                <value>
                    <fullName>Diastolic BP Reduction</fullName>
                </value>
                <value>
                    <fullName>Program Score</fullName>
                </value>
                <value>
                    <fullName>Renewal Timing</fullName>
                </value>
                <value>
                    <fullName>Cross Sells/Expansions</fullName>
                </value>
                <value>
                    <fullName>Client NPS</fullName>
                </value>
                <value>
                    <fullName>Interaction Cadence</fullName>
                </value>
                <value>
                    <fullName>Executive Sponsor Interaction/Engagement</fullName>
                </value>
                <value>
                    <fullName>Contract Path/Partner Relationship/Status</fullName>
                </value>
                <value>
                    <fullName>Client Business Health</fullName>
                </value>
                <value>
                    <fullName>Issues</fullName>
                </value>
                <value>
                    <fullName>Competitor w/in account</fullName>
                </value>
                <value>
                    <fullName>Immediate Action Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Immediate_Action_Needed__c</fullName>
        <label>Immediate Action Needed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Merger</fullName>
                </value>
                <value>
                    <fullName>Breach of Contract</fullName>
                </value>
                <value>
                    <fullName>Other Nuclear Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interaction_Cadence__c</fullName>
        <label>Interaction Cadence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Meeting established cadence</fullName>
                </value>
                <value>
                    <fullName>No meeting cadence/consistently cancels</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issues__c</fullName>
        <label>Issues</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing Issues</fullName>
                </value>
                <value>
                    <fullName>Data Issues</fullName>
                </value>
                <value>
                    <fullName>Billing Issues</fullName>
                </value>
                <value>
                    <fullName>Eligibility Issues</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meeting_Established_Cadence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Meeting Established Cadence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_Satisfaction__c</fullName>
        <label>Member Satisfaction</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Participating_in_any_optimized_campaigns__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Participating in any optimized campaigns</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Population_Refresh__c</fullName>
        <label>Population Refresh</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>within 3 months</fullName>
                </value>
                <value>
                    <fullName>&gt; 3 months ago</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProgramScoreUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ProgramScoreUpdated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Diabetes</fullName>
                </value>
                <value>
                    <fullName>Hypertension</fullName>
                </value>
                <value>
                    <fullName>Behavioral Health</fullName>
                    <isActive>false</isActive>
                    <label>Behavioral Health</label>
                </value>
                <value>
                    <fullName>Diabetes Prevention</fullName>
                    <isActive>false</isActive>
                    <label>Diabetes Prevention</label>
                </value>
                <value>
                    <fullName>Weight Management</fullName>
                    <isActive>false</isActive>
                    <label>Weight Management</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ROI_Status_DM__c</fullName>
        <label>ROI Status - DM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client &lt;1.25 years on program or partnership doesn&apos;t allow ROI</fullName>
                </value>
                <value>
                    <fullName>Client &gt;1.25 with 100 activated, claims based completed</fullName>
                </value>
                <value>
                    <fullName>Client &gt;1.25 with 100 activated, fitch mode or BOB</fullName>
                </value>
                <value>
                    <fullName>Client &gt;1.25 years with no ROI completed</fullName>
                </value>
                <value>
                    <fullName>Client ROI completed but results were negative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ROI_Status_HTN__c</fullName>
        <label>ROI Status - HTN</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client &lt;1.25 years on program or partnership doesn&apos;t allow ROI</fullName>
                </value>
                <value>
                    <fullName>Client &gt;1.25 with 100 activated, claims based completed</fullName>
                </value>
                <value>
                    <fullName>Client &gt;1.25 years with no ROI completed</fullName>
                </value>
                <value>
                    <fullName>Client &gt; 1.25 years with ROI completed but negative results</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recommended_Action_Steps__c</fullName>
        <label>Recommended Action Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Systolic_BP_Reduction__c</fullName>
        <label>Systolic BP Reduction</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>eHba1c_Reduction__c</fullName>
        <label>eHba1c Reduction</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Health Score</label>
    <nameField>
        <displayFormat>HS-{00000000}</displayFormat>
        <label>Health Score Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Health Scores</pluralLabel>
    <recordTypes>
        <fullName>Account_Health_Score</fullName>
        <active>true</active>
        <label>Account Health Score</label>
    </recordTypes>
    <recordTypes>
        <fullName>Program_Health_Score</fullName>
        <active>true</active>
        <label>Program Health Score</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>